--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.3.0"
-  }
+    "private": true,
+    "scripts": {
+        "prod": "gulp --production",
+        "dev": "gulp watch"
+    },
+    "devDependencies": {
+    },
+    "dependencies": {
+        "laravel-elixir-livereload": "^1.1.4",
+        "laravel-elixir-stylus": "^1.0.1",
+        "poststylus": "^0.2.3",
+        "rucksack-css": "^0.8.5",
+        "gulp": "^3.9.1",
+        "font-awesome": "^4.5.0",
+        "jquery": "^2.2.1",
+        "laravel-elixir": "^5.0.0"
+    }  
 }
