--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "laravel-elixir-livereload": "^1.1.4",
     "laravel-elixir-stylus": "^1.0.1",
     "moment": "^2.13.0",
+    "owl.carousel": "^2.1.4",
     "poststylus": "^0.2.3",
     "requirejs": "^2.2.0",
     "rucksack-css": "^0.8.5"
