--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "fancybox-plus": "^1.3.8",
     "font-awesome": "^4.5.0",
     "fuelux": "^3.15.4",
     "gmaps": "^0.4.24",
