--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "owl.carousel": "^2.1.4",
     "poststylus": "^0.2.3",
     "requirejs": "^2.2.0",
-    "rucksack-css": "^0.8.5"
+    "rucksack-css": "^0.8.5",
+    "slick-carousel": "^1.6.0"
   }
 }
