--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "prod": "gulp --production",
     "dev": "gulp watch"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^6.3.7",
+    "lost": "^7.0.3",
+    "rucksack-css": "^0.8.6"
+  },
   "dependencies": {
     "font-awesome": "^4.5.0",
     "fuelux": "^3.15.4",
