make Excelable trait for fetching prices from excel files

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
             "database"
         ],
         "psr-4": {
-            "DymaVDomeNet\\": "app/"
+            "Teplokvartal\\": "app/"
         }
     },
     "autoload-dev": {
